# apep

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMPARISON.md  CONTRIBUTING.md  DESIGN.md  DOCUMENTATION_UPDATES.md  FAQ.md  IMPROVEMENTS.md  Makefile  QUICKSTART.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
cmake/: apepConfig.cmake.in
docs/: ADVANCED.md  API.md  CAPABILITIES.md  I18N.md  IMPLEMENTATION_EXAMPLES.md  LOGGER_INTEGRATION.md  STYLES.md
examples/: README.md  common_i18n.h  exception_demo.c  helpers_demo.c  hex_error_demo.c  i18n_comprehensive_demo.c  i18n_demo.c  i18n_stress_demo.c  log_demo.c  logger_wrapper.c  new_features_demo.c  show_demo.c  text_error_demo.c
examples/apep_helpers_demo_locales/: cs.json  en.json
examples/apep_logger_demo_locales/: cs.json  en.json
examples/apep_new_features_demo_locales/: cs.json  en.json
examples/helpers_demo_locales/: cs.json  en.json
examples/hex_error_demo_locales/: cs.json  en.json
examples/log_demo_locales/: cs.json  en.json
examples/show_demo_locales/: cs.json  en.json
examples/text_error_demo_locales/: cs.json  en.json
include/apep/: apep.h  apep_exception.h  apep_helpers.h  apep_i18n.h
locales/: README.md  cs.loc  en.loc
screenshots/: README.md
src/: apep_assert.c  apep_buffer.c  apep_caps.c  apep_color.c  apep_exception.c  apep_filter.c  apep_helpers.c  apep_hex.c  apep_i18n.c  apep_internal.h  apep_json.c  apep_multispan.c  apep_perf.c  apep_progress.c  apep_scheme.c  apep_stack.c  apep_suggest.c  apep_text.c  apep_util.c
